docs-archive/apache-airflow-providers-common-sql/1.35.0/_sources/_api/airflow/providers/common/sql/operators/generic_transfer/index.rst.txt
airflow.providers.common.sql.operators.generic_transfer
=======================================================

.. py:module:: airflow.providers.common.sql.operators.generic_transfer


Classes
-------

.. autoapisummary::

   airflow.providers.common.sql.operators.generic_transfer.GenericTransfer


Module Contents
---------------

.. py:class:: GenericTransfer(*, sql, destination_table, source_conn_id, source_hook_params = None, destination_conn_id, destination_hook_params = None, rows_processor = None, preoperator = None, insert_args = None, page_size = None, paginated_sql_statement_clause = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Moves data from a connection to another.

   Assuming that they both provide the required methods in their respective hooks.
   The source hook needs to expose a `get_records` method, and the destination a
   `insert_rows` method.

   This is meant to be used on small-ish datasets that fit in memory.

   :param sql: SQL query to execute against the source database. (templated)
   :param destination_table: target table. (templated)
   :param source_conn_id: source connection. (templated)
   :param source_hook_params: source hook parameters.
   :param destination_conn_id: destination connection. (templated)
   :param destination_hook_params: destination hook parameters.
   :param rows_processor: (optional) A callable applied once per batch of rows before insertion.
       It receives the full list of rows and the task context, and must return a list of rows compatible with
       the underlying hook's.
   :param preoperator: sql statement or list of statements to be
       executed prior to loading the data. (templated)
   :param insert_args: extra params for `insert_rows` method.
   :param page_size: number of records to be read in paginated mode (optional).
   :param paginated_sql_statement_clause: SQL statement clause to be used for pagination (optional).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('source_conn_id', 'destination_conn_id', 'sql', 'destination_table', 'preoperator',...



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.sql', '.hql')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#b0f07c'



   .. py:attribute:: sql


   .. py:attribute:: destination_table


   .. py:attribute:: source_conn_id


   .. py:attribute:: source_hook_params
      :value: None



   .. py:attribute:: destination_conn_id


   .. py:attribute:: destination_hook_params
      :value: None



   .. py:attribute:: preoperator
      :value: None



   .. py:attribute:: insert_args


   .. py:attribute:: page_size
      :value: None



   .. py:attribute:: paginated_sql_statement_clause
      :value: '{} LIMIT {} OFFSET {}'



   .. py:method:: get_hook(conn_id, hook_params = None)
      :classmethod:


      Return DbApiHook for this connection id.

      :param conn_id: connection id
      :param hook_params: hook parameters
      :return: DbApiHook for this connection



   .. py:property:: source_hook
      :type: airflow.providers.common.sql.hooks.sql.DbApiHook



   .. py:property:: destination_hook
      :type: airflow.providers.common.sql.hooks.sql.DbApiHook



   .. py:method:: get_paginated_sql(offset)

      Format the paginated SQL statement using the current format.



   .. py:method:: render_template_fields(context, jinja_env = None)

      Template all attributes listed in *self.template_fields*.

      This mutates the attributes in-place and is irreversible.

      :param context: Context dict with values to apply on content.
      :param jinja_env: Jinja's environment to use for rendering.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)


